# diorite-df

./: .gitignore  Cargo.toml  README.md  actiondump.json  cli.md  diorite.g4  file.drt  flake.nix  inspire.js  min_dbc.json  reconstruct.txt
actiondump_nonsense/: app.js  dbc.json  index.html
dioritec/: Cargo.toml  README.md  project.hcp
dioritec/notes/: diorite.g4  dioritec.md  errors.md  home_stretch.md  lexer.drt  test.drt  the_drt.md  using_lib.md
dioritec/src/: diagnostics.rs  dump.rs  lib.rs  main.rs  test.rs
dioritec/src/ast/: mod.rs  statement.rs  top.rs
dioritec/src/cli/: args.rs  flow.rs  mod.rs
dioritec/src/codegen/: block.rs  data.rs  hcp.rs  mod.rs
dioritec/src/common/: ast.rs  data.rs  mod.rs  span.rs  test.rs  tree.rs
dioritec/src/error/: diagnostic.rs  mod.rs  semantic.rs  syntax.rs
dioritec/src/parser/: helper.rs  mod.rs  test.rs
dioritec/src/parser/stmt/: common.rs  kind.rs  mod.rs
dioritec/src/project/: analyzed.rs  generated.rs  mod.rs  parsed.rs  raw.rs
dioritec/src/semantic/: mod.rs  stmt.rs  top.rs
dioritec/src/tree/: mod.rs  recovery.rs  statement.rs  top.rs
notes/: redesign.md  todo.md  using_lib.md
project/: diorite.toml
project/src/: main.drt
src/: args.rs  compile.rs  diagnostics.rs  dump.rs  flow.rs  lexer.rs  main.rs  mod.rs  span.rs  test.rs
src/ast/: mod.rs  recovery.rs  statement.rs  top.rs
src/codegen/: block.rs  data.rs  mod.rs
src/common/: ast.rs  data.rs  mod.rs  project.rs  span.rs  test.rs  tree.rs
src/error/: cli.rs  mod.rs  semantic.rs  syntax.rs
src/parser/: error.rs  helper.rs  mod.rs  stmt.rs  test.rs  top.rs
src/parser/helper/: mod.rs
src/parser/stmt/: common.rs  kind.rs  mod.rs
src/project/: mod.rs
src/semantic/: mod.rs  stmt.rs  top.rs
src/tree/: mod.rs  recovery.rs  statement.rs  top.rs
