[package]
name = "diorite_df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
base64 = "0.21.0"
chumsky = { version = "1.0.0-alpha.6", features = ["regex"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.96"
logos = "0.13.0"
clap = { version = "4.4.8", features = ["derive"] }
