[package]
name = "diorite_df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
base64 = "0.21.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
logos = "0.13.0"
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
lasso = { version = "0.7.2", features = ["multi-threaded", "serde"] }
arrayvec = "0.7.4"
