[package]
name = "diorite_df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
base64 = "0.21.0"
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
logos = "0.13.0"
clap = { version = "4.4.8", features = ["derive"] }
thiserror = "1.0.50"
lasso = { version = "0.7.2", features = ["multi-threaded", "serde"] }
arrayvec = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
colored = "2.1.0"
enum-assoc = "1.1.0"
path-clean = "1.0.1"
rustc-hash = "2.0.0"
futures = "0.3.30"
color-eyre = "0.6.3"
eyre = "0.6.12"

